@@ -28,7 +28,7 @@
 package it.tidalwave.bluemarine2.rest.impl;
 
 import javax.annotation.Nonnull;
-import java.util.Arrays;
+import java.util.List;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
@@ -53,7 +53,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import it.tidalwave.bluemarine2.commons.test.SpringTestSupport;
 import lombok.extern.slf4j.Slf4j;
-import static it.tidalwave.util.test.FileComparisonUtils8.assertSameContents;
+import static it.tidalwave.util.test.FileComparisonUtilsWithPathNormalizer.*;
 import static it.tidalwave.bluemarine2.commons.test.TestSetLocator.*;
 import static it.tidalwave.bluemarine2.commons.test.TestUtilities.*;
 import static org.mockito.Mockito.*;
@@ -77,14 +77,14 @@ public class MusicResourcesControllerTest extends SpringTestSupport
     private static final ResponseErrorHandler IGNORE_HTTP_ERRORS = new ResponseErrorHandler()
       {
         @Override
-        public boolean hasError (final ClientHttpResponse response)
+        public boolean hasError (@Nonnull final ClientHttpResponse response)
           throws IOException
           {
             return false;
           }
 
         @Override
-        public void handleError (final ClientHttpResponse response)
+        public void handleError (@Nonnull final ClientHttpResponse response)
           throws IOException
           {
           }
@@ -144,7 +144,7 @@ public class MusicResourcesControllerTest extends SpringTestSupport
         // then
         final Path actualPath = PATH_TEST_RESULTS.resolve(expected);
         final Path expectedPath = PATH_EXPECTED_TEST_RESULTS.resolve(expected);
-        ResponseEntityIo.store(actualPath, response, Arrays.asList("Last-Modified"), postProcessor);
+        ResponseEntityIo.store(actualPath, response, List.of("Last-Modified", "Date"), postProcessor);
         assertSameContents(expectedPath, actualPath);
       }
 
